chore: update ignore to pickout checkpoint of ipynb

--- a/pythonDemo/matplotlibConfig.ipynb
+++ b/pythonDemo/matplotlibConfig.ipynb
@@ -14,6 +14,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## jupyter notebook theme"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "jt -t monokai -f firacode -cellw 95% -fs 10 -tf fira -tfs 8 -nf firacode -nfs 8 -dfs 8 -lineh 120 -T  # set to be sublime alike style"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## basic \n",
     "numpy, pandas, matplotlib, path-settings"
    ]
@@ -121,36 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-02T18:14:21.205674Z",
-     "start_time": "2020-11-02T18:14:21.198975Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array(range(1,15))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-11-02T18:15:38.423406Z",
-     "start_time": "2020-11-02T18:15:37.943673Z"
+     "end_time": "2020-11-02T18:22:05.444914Z",
+     "start_time": "2020-11-02T18:22:04.953749Z"
     }
    },
    "outputs": [
@@ -160,7 +149,7 @@
        "'\\nplt.subplots_adjust(wspace =0.998, hspace=0.2, left= 0.2 , right=0.8)#调整子图间距\\nplt.figure()\\nfor city in range(3):\\n    for day in range(5):   \\n        plt.subplot(131+city)\\n        plt.plot( range(traffic_data.shape[1]),traffic_data[day_index+day,:,city_index+city] )\\n        plt.legend([f\"day{str(i+10)}\" for i in range(10)])\\n        plt.xlabel(\"time\")\\n        plt.ylabel(\"traffic_flow\")\\n'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
