--- a/pythonDemo/matplotlibConfig.ipynb
+++ b/pythonDemo/matplotlibConfig.ipynb
@@ -98,6 +98,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Trivial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-27T12:28:11.253702Z",
+     "start_time": "2020-11-27T12:28:11.200250Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>[data-mime-type=\"application/vnd.jupyter.stdout\"] pre { font-size:28px}</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# enlarge output in jupyter lab\n",
+    "from IPython.display import HTML\n",
+    "display(HTML('''<style>[data-mime-type=\"application/vnd.jupyter.stdout\"] pre { font-size:28px}</style>'''))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br><br><br>\n",
     "\n",
     "\n",
