--- a/pythonDemo/matplotlibConfig.ipynb
+++ b/pythonDemo/matplotlibConfig.ipynb
@@ -6,8 +6,19 @@
    "source": [
     "# config Settings\n",
     "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Includes</b> many things.\n",
-    "</div>\n"
+    "<b> 显示这样效果的源代码在下方 </b> \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>raw link :</b> \n",
+    "</div>"
    ]
   },
   {
