--- a/pythonDemo/matplotlibConfig.ipynb
+++ b/pythonDemo/matplotlibConfig.ipynb
@@ -354,7 +354,7 @@
    "toc_window_display": false
   },
   "toc-autonumbering": true,
-  "toc-showcode": true,
+  "toc-showcode": false,
   "toc-showmarkdowntxt": false,
   "toc-showtags": false
  },
