--- a/pythonDemo/Collection.ipynb
+++ b/pythonDemo/Collection.ipynb
@@ -38,6 +38,209 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# numpy常用/好用API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## np.tile\n",
+    "针对整个数组进行操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat = np.array([[1,2], [3, 4]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**只能通过np.tile的方式调用**\n",
+    "\n",
+    "**默认横线tile**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 1, 2, 1, 2, 1, 2],\n",
+       "       [3, 4, 3, 4, 3, 4, 3, 4]])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 1, 2, 1, 2, 1, 2],\n",
+       "       [3, 4, 3, 4, 3, 4, 3, 4]])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.tile(mat,(1, 4))\n",
+    "np.tile(mat, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [1, 2],\n",
+       "       [3, 4],\n",
+       "       [1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.tile(mat, (3, 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## np.repeat 逐元素进行操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7., 7., 7., 7.])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.repeat(7.,4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**通过np调用 以及 array的API调用，是一样的效果**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 10, 10, 20, 20])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 10, 10, 20, 20])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=np.array([10,20])\n",
+    "a.repeat([3,2])\n",
+    "\n",
+    "np.repeat(a,[3,2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**同样，也不会改变shape**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 20],\n",
+       "       [10, 20],\n",
+       "       [10, 20],\n",
+       "       [30, 40],\n",
+       "       [30, 40]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 10, 10, 20, 20],\n",
+       "       [30, 30, 30, 40, 40]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=np.array([[10,20],[30,40]])\n",
+    "a.repeat([3,2],axis=0)\n",
+    "\n",
+    "a.repeat([3,2],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# pandas常用API"
    ]
   },
