--- a/pythonDemo/Collections(JupyterConfig,Matplotlib,numpy,pandas,argparse).ipynb
+++ b/pythonDemo/Collections(JupyterConfig,Matplotlib,numpy,pandas,argparse).ipynb
@@ -452,6 +452,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# more_itertools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## chunked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 26, 42, 58, 54]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from more_itertools import chunked\n",
+    "to_process= range(1,20) \n",
+    "\n",
+    "after_process= [ sum(x) for x in chunked(to_process, 4)]\n",
+    "print(after_process)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# numpy常用/好用API"
    ]
   },
