--- a/pythonDemo/demo-JupyterConfig,Matplotlib.ipynb.ipynb
+++ b/pythonDemo/demo-JupyterConfig,Matplotlib.ipynb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "massive-albany",
+   "id": "floating-tours",
    "metadata": {},
    "source": [
     "# config Settings\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "varying-netherlands",
+   "id": "acute-georgia",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fitted-treasurer",
+   "id": "confirmed-blake",
    "metadata": {},
    "source": [
     "## jupyter notebook theme"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handy-police",
+   "id": "mediterranean-output",
    "metadata": {},
    "source": [
     "jt -t monokai -f firacode -cellw 95% -fs 10 -tf fira -tfs 8 -nf firacode -nfs 8 -dfs 8 -lineh 120 -T  # set to be sublime alike style"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attempted-information",
+   "id": "portable-brief",
    "metadata": {},
    "source": [
     "## basic \n",
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "corporate-father",
+   "id": "configured-citizenship",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-02T18:11:44.762748Z",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "desperate-lambda",
+   "id": "saved-people",
    "metadata": {},
    "source": [
     "## Trivial"
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "interstate-intro",
+   "id": "twenty-ministry",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-27T12:28:11.253702Z",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "maritime-output",
+   "id": "identical-marking",
    "metadata": {},
    "source": [
     "-----"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "korean-chinese",
+   "id": "multiple-function",
    "metadata": {},
    "source": [
     "# 画图"
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "difficult-kitty",
+   "id": "dependent-repair",
    "metadata": {},
    "source": [
     "## matplotlib"
@@ -150,19 +150,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seventh-publicity",
+   "id": "revolutionary-rolling",
    "metadata": {},
    "source": [
     "### reference\n",
     "* [x] [differ fig/axes/plot](https://zhuanlan.zhihu.com/p/93423829)\n",
     "* [x] [official doc](https://matplotlib.org/tutorials/introductory/usage.html)\n",
-    "* [x] [色彩大全](https://juejin.cn/post/6844904145032331272)"
+    "* [x] [色彩大全](https://juejin.cn/post/6844904145032331272)\n",
+    "* [x] [这个笔记](https://zhuanlan.zhihu.com/p/33270402)讲解的很完整"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dense-occasions",
+   "id": "permanent-sailing",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-02T18:13:27.787711Z",
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excessive-permission",
+   "id": "wanted-quarter",
    "metadata": {},
    "source": [
     "#### SciencePlots已经够用"
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unable-london",
+   "id": "mobile-darkness",
    "metadata": {},
    "source": [
     "就是要确保 Times New Roman字体可用，具体教程可以看[Hesy:论文写作相关 目录](https://blog.csdn.net/Hesy_H/article/details/109104483)"
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dying-accent",
+   "id": "coordinate-birthday",
    "metadata": {},
    "source": [
     "with结构，脱离于全局，仅使用一次，不影响全局设置"
@@ -201,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "resident-module",
+   "id": "hungry-gentleman",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "textile-mumbai",
+   "id": "hispanic-corporation",
    "metadata": {},
    "source": [
     "for both ax and plt API，it works well."
@@ -236,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "loaded-triumph",
+   "id": "beautiful-complex",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "streaming-shipping",
+   "id": "banned-enough",
    "metadata": {},
    "source": [
     "#### 进一步精细的调整"
@@ -281,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "separated-singer",
+   "id": "respective-spiritual",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-02T18:22:05.444914Z",
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "superb-setup",
+   "id": "above-ghana",
    "metadata": {},
    "source": [
     "### 双y轴画法"
@@ -377,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "realistic-committee",
+   "id": "maritime-pocket",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proper-metro",
+   "id": "unable-watts",
    "metadata": {},
    "source": [
     "<br><br><br>\n",
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "therapeutic-happening",
+   "id": "nutritional-shelter",
    "metadata": {},
    "source": [
     "## seaborn"
@@ -443,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "clean-reflection",
+   "id": "labeled-future",
    "metadata": {},
    "outputs": [
     {
