--- a/pythonDemo/demo-numpy,pandas,argparse.ipynb
+++ b/pythonDemo/demo-numpy,pandas,argparse.ipynb
@@ -11,7 +11,7 @@
     "# InteractiveShell.ast_node_interactivity='all'\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
-    "plt.style.use(['science','no-latex','grid','high-contrast']) # high-contrast指的是配色的选取\n",
+    "plt.style.use(['science','no-latex','grid','high-contrast','notebook']) # high-contrast指的是配色的选取, 去除notebook以后，在notebook里面显示得不方便\n",
     "%pylab inline\n",
     "\n",
     "# %load_ext autoreload\n",
