--- a/pythonDemo/demo-numpy,pandas,argparse.ipynb
+++ b/pythonDemo/demo-numpy,pandas,argparse.ipynb
@@ -1330,6 +1330,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## read_csv 和 to_csv注意点"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdData.to_csv( filePath, data_to_store , header=None,index=False ) # 默认index和header都会被记录下来（然后默认读的时候没有，hh搞笑）\n",
+    "tmp_data = pdData.read_csv(filePath,header=None)  # 默认是不读入index的，如果有且要读入的话，要设置index_col=0参数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# argparse\n",
     "[官网的reference](https://docs.python.org/zh-cn/3/library/argparse.html#argparse.ArgumentParser.add_argument)"
    ]
