--- a/pythonDemo/demo-JupyterConfig,Matplotlib.ipynb.ipynb
+++ b/pythonDemo/demo-JupyterConfig,Matplotlib.ipynb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "arbitrary-wagon",
+   "id": "infinite-coordinate",
    "metadata": {},
    "source": [
     "# config Settings\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wireless-genealogy",
+   "id": "raising-syria",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dominican-retrieval",
+   "id": "sustainable-monte",
    "metadata": {},
    "source": [
     "## jupyter notebook theme"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "express-perspective",
+   "id": "economic-captain",
    "metadata": {},
    "source": [
     "jt -t monokai -f firacode -cellw 95% -fs 10 -tf fira -tfs 8 -nf firacode -nfs 8 -dfs 8 -lineh 120 -T  # set to be sublime alike style"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forced-quarterly",
+   "id": "recovered-child",
    "metadata": {},
    "source": [
     "## basic \n",
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "sound-malta",
+   "id": "special-uganda",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-02T18:11:44.762748Z",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "listed-plaza",
+   "id": "voluntary-caution",
    "metadata": {},
    "source": [
     "## Trivial"
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "overhead-sleep",
+   "id": "acknowledged-thirty",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-27T12:28:11.253702Z",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "right-scale",
+   "id": "commercial-living",
    "metadata": {},
    "source": [
     "-----"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "speaking-shanghai",
+   "id": "polar-third",
    "metadata": {},
    "source": [
     "# 画图"
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collected-chamber",
+   "id": "valued-design",
    "metadata": {},
    "source": [
     "## matplotlib"
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rotary-activation",
+   "id": "ceramic-compensation",
    "metadata": {},
    "source": [
     "### reference\n",
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "assigned-hartford",
+   "id": "magnetic-privacy",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-02T18:13:27.787711Z",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "convertible-friendship",
+   "id": "smoking-student",
    "metadata": {},
    "source": [
     "#### SciencePlots已经够用"
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "respective-capability",
+   "id": "spectacular-period",
    "metadata": {},
    "source": [
     "就是要确保 Times New Roman字体可用，具体教程可以看[Hesy:论文写作相关 目录](https://blog.csdn.net/Hesy_H/article/details/109104483)"
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thick-semiconductor",
+   "id": "freelance-client",
    "metadata": {},
    "source": [
     "with结构，脱离于全局，仅使用一次，不影响全局设置"
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "vietnamese-adoption",
+   "id": "animated-tiffany",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sexual-lighting",
+   "id": "forced-opportunity",
    "metadata": {},
    "source": [
     "for both ax and plt API，it works well."
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "talented-guatemala",
+   "id": "productive-province",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "martial-mistake",
+   "id": "friendly-chosen",
    "metadata": {},
    "source": [
     "#### 进一步精细的调整"
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "turned-tenant",
+   "id": "soviet-tooth",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-02T18:22:05.444914Z",
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "median-slide",
+   "id": "adolescent-oxford",
    "metadata": {},
    "source": [
     "### 双y轴画法"
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "supreme-mercury",
+   "id": "pharmaceutical-credit",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indonesian-bidder",
+   "id": "labeled-wagner",
    "metadata": {},
    "source": [
     "### bar 柱状图"
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pleased-charleston",
+   "id": "becoming-mason",
    "metadata": {},
    "source": [
     "数据制造"
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dutch-chrome",
+   "id": "sitting-bacon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "horizontal-metadata",
+   "id": "acute-google",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prepared-assumption",
+   "id": "endless-mandate",
    "metadata": {},
    "source": [
     "处理横轴的位置"
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "boolean-stable",
+   "id": "opposite-coast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "fitted-strand",
+   "id": "filled-wheel",
    "metadata": {},
    "outputs": [
     {
@@ -605,13 +605,13 @@
     "\n",
     "xticks(r2, topo_name,)\n",
     "plt.ylabel('time consumption (ms)')\n",
-    "plt.savefig('control-loop-time-cost.pdf')"
+    "# plt.savefig('control-loop-time-cost.pdf')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "jewish-helen",
+   "id": "virtual-gamma",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unauthorized-optimization",
+   "id": "geological-nashville",
    "metadata": {},
    "source": [
     "<br><br><br>\n",
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "honest-denmark",
+   "id": "documentary-debut",
    "metadata": {},
    "source": [
     "## seaborn"
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aging-rabbit",
+   "id": "native-bradley",
    "metadata": {},
    "outputs": [
     {
